datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id       String  @id @default(uuid())
  name     String
  phone    String?
  email    String  @unique
  password String

  UserOnSubject UserOnSubject[]
}

model Subject {
  id       String @id @default(uuid())
  name     String
  maxFaults  Int

  UserOnSubject UserOnSubject[]
}

model UserOnSubject {
  faults   Int
  finished Boolean @default(false)
  userId   String 
  subjectId String
  User      User? @relation(fields: [userId], references: [id])
  Subject   Subject? @relation(fields:[subjectId], references: [id])

  @@id([userId,subjectId])
}